--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
     <string name="ok">Ok</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="register">Register</string>
 </resources>
