--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="register">Register</string>
     <string name="create_a_new_account">Not yet a member? create a new account...</string>
     <string name="welcome_message"> Welcome to Geartronix</string>
+    <string name="Gallery">Gallery</string>
 </resources>
