Added style to menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="main_email">info@geartronix.co.za</string>
+    <string name="slogan_1">The best in transmission repairs</string>
 </resources>
