--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sign_in2">Sign in</string>
     <string name="ddd">app_name</string>
+    <string name="sign_out">Sign out</string>
 </resources>
