--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,11 @@
     <string name="create_a_new_account">Not yet a member? create a new account...</string>
     <string name="welcome_message"> Welcome to Geartronix</string>
     <string name="signin_welcome_message">Welcome please sign in to your account to continue</string>
-    <string name="Gallery">Gallery</string>
+    <string name="gallery">Gallery</string>
+    <string name="messages">Messages</string>
+    <string name="FindUs">Find us</string>
+    <string name="diagnostics">Diagnostics</string>
+    <string name="profile">Profile</string>
     <string name="settings">Settings</string>
     <string name="services">Services</string>
     <string name="drawer_open">open</string>
