Added animation to gallery image button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="technical_error">We are currently experiences technical issues please try again later</string>
     <string name="login_error">Login error</string>
     <string name="choose_an_activity">Choose an activity</string>
+    <string name="picture_saved_to_gallery">Picture saved to gallery</string>
 </resources>
