--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="choose_an_activity">Choose an activity</string>
     <string name="picture_saved_to_gallery">Picture saved to gallery</string>
     <string name="send_to">Send to</string>
+    <string name="welcome">Welcome</string>
 </resources>
