--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="send_to">Send to</string>
     <string name="welcome">Welcome</string>
     <string name="edit">Edit</string>
+    <string name="points">Points</string>
+    <string name="cars">Cars</string>
+    <string name="ask_geartronix_a_question">Ask Geartronix a question</string>
 </resources>
