--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="points">Points</string>
     <string name="cars">Cars</string>
     <string name="ask_geartronix_a_question">Ask Geartronix a question</string>
+    <string name="edit_your_profile">Edit your profile</string>
 </resources>
