--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,7 @@
     <string name="enter_email_or_cell">Enter your email or cell</string>
     <string name="write_a_message">Write a message...</string>
     <string name="typing">Typing...</string>
+    <string name="inbox">Inbox</string>
+    <string name="outbox">Outbox</string>
+    <string name="join_discussions">Join discussions</string>
 </resources>
