--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="inbox">Inbox</string>
     <string name="outbox">Outbox</string>
     <string name="join_discussions">Join discussions</string>
+    <string name="block">Block</string>
 </resources>
