--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="outbox">Outbox</string>
     <string name="join_discussions">Join discussions</string>
     <string name="block">Block</string>
+    <string name="contact_us">Contact us</string>
+    <string name="find_us">Find us</string>
 </resources>
