--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="block">Block</string>
     <string name="contact_us">Contact us</string>
     <string name="find_us">Find us</string>
+    <string name="help">Help</string>
 </resources>
