--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,8 @@
     <string name="help">Help</string>
     <string name="create_username">Create username...</string>
     <string name="enter_city">Enter your city</string>
+    <string name="confirm">Confirm</string>
+    <string name="profile_change_confirmation_message">Would you like to save changes you made to your profile</string>
+    <string name="cancel">Cancel</string>
+    <string name="profile_editmode_exited">Exited Edit mode</string>
 </resources>
