--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="yes">Yes</string>
     <string name="sign_in_welcome_message">please enter your password to continue</string>
     <string name="Hi">Hi</string>
+    <string name="general_checkup_diagostic_message">You are about to request a general check up and diagnostic</string>
 </resources>
