--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="general_checkup_diagostic_message">You are about to request a general check up and diagnostic</string>
     <string name="continue_message">, would you like to continue?</string>
     <string name="create_account">Create account</string>
+    <string name="update_password">Update password</string>
 </resources>
