--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="password_error">Your password does not meet minimum requirements</string>
     <string name="password_match_error">Your passwords don\'t match</string>
     <string name="quit_registration">Quit registration</string>
+    <string name="enter_password">Please enter your password</string>
 </resources>
