--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="password_match_error">Your passwords don\'t match</string>
     <string name="quit_registration">Quit registration</string>
     <string name="enter_password">Please enter your password</string>
+    <string name="switch_user">Switch user</string>
 </resources>
