--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="quit_registration">Quit registration</string>
     <string name="enter_password">Please enter your password</string>
     <string name="switch_user">Switch user</string>
+    <string name="referral">Referral</string>
 </resources>
