--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="enter_password">Please enter your password</string>
     <string name="switch_user">Switch user</string>
     <string name="referral">Referral</string>
+    <string name="change_password">Change your password</string>
 </resources>
