--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,10 +19,8 @@
     <string name="drawer_open">open</string>
     <string name="drawer_close">closed</string>
     <string name="title_activity_home">HomeActivity</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
     <string name="main_email">info@geartronix.co.za</string>
     <string name="slogan_1">The best in transmission repairs</string>
@@ -80,7 +78,7 @@
     <string name="password_match_error">Your passwords don\'t match</string>
     <string name="quit_registration">Quit registration</string>
     <string name="enter_password">Please enter your password</string>
-    <string name="switch_user">Switch userName</string>
+    <string name="switch_user">Switch user</string>
     <string name="referral">Referrals</string>
     <string name="change_password">Change your password</string>
 </resources>
