--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="referral">Referrals</string>
     <string name="change_password">Change your password</string>
     <string name="feature_error_message">This feature is currently unavailable</string>
+    <string name="loading_services">Loading services...</string>
 </resources>
