--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="change_password">Change your password</string>
     <string name="feature_error_message">This feature is currently unavailable</string>
     <string name="loading_services">Loading services...</string>
+    <string name="loading_gallery">Loading Gallery...</string>
 </resources>
